<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Upgrade</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="network_not_connect">网络没有连接,请先连接网络</string>
    <string name="connect_server_failed">连接服务器失败</string>
    <string name="img_name">IMG名称</string>
    <string name="cur_ver">当前版本</string>
    <string name="lastest_ver">最新版本</string>
    <string name="sd_not_present">无法检测到SD卡</string>
    <string name="install">安装</string>
    <string name="upgrade">升级</string>
    <string name="sure_update_img">确定升级%s吗</string>
    <string name="auto_upgrade">自动升级</string>
    <string name="sure_auto_upgrade">确定自动升级吗?</string>
    <string name="sure_erase_all_upgrade">确定全部擦除升级吗?</string>
    <string name="erase_audo_upgrade">全部擦除升级</string>
    <string name="upgrade_faled">更新失败</string>
	
</resources>