<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dafeng.upgrade.MainActivity$PlaceholderFragment" >

    <LinearLayout
        android:id="@+id/layout_imgs"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/img_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="200dip"
                android:text="@string/cur_ver" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="400dip"
                android:text="@string/lastest_ver" />
        </RelativeLayout>

        <ListView
            android:id="@+id/list_imgs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:choiceMode="multipleChoice" >
        </ListView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="50dip" >

            <Button
                android:id="@+id/btn_auto_upgrade"
                style="?android:attr/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auto_upgrade" />

            <Button
                android:id="@+id/btn_erase_upgrade"
                style="?android:attr/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dip"
                android:text="@string/erase_audo_upgrade" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/no_use_component"
        android:layout_width="0dip"
        android:layout_height="0dip" />

</RelativeLayout>